# wifi_base_oscilloscope

./: LICENSE  README.md
OSCIIv1.1/: main.py  trigger.py
OSCIIv2.0/: main.py  test.py  trigger.py
pico-w/: CMakeLists.txt  client_ap.py  main.c  output.txt  picow_ap.c  picow_ap.h
